# lib/db/src/schema/index.ts
@@ -1,4 +1,5 @@
 export * from "./bookings";
+export * from "./notifications";
 export * from "./profiles";
 export * from "./providers";
 export * from "./services";
